# simple_esiaf_doa_cpp

./: .gitignore  CMakeLists.txt  README.md  package.xml
audio/: CMakeLists.txt  package.xml
audio/src/: ssloc.cpp
config/: basic_doa_config.cfg
include/: Faces.h  Grabber.h  Grabber_ROS.h  Grabber_RSB.h  Grabber_XIMEA.h  Saliency.h
launch/: doa.launch
src/: Faces.cpp  Grabber.cpp  Grabber_ROS.cpp  Grabber_RSB.cpp  Grabber_XIMEA.cpp  Saliency.cpp  dlib_example.cpp  main.cpp  main.hpp  ssloc.cpp
